Added consumer for comment events Realised logic of adding new comment to post in cache